* Feb  2 2023 Massimiliano Pala <madwolf@openca.org>
- Added new pki-oid tool for OIDs and NIDs lookup
- Fixed inverted digest/pkey ID retrieval in PKI_X509_ALGOR_VALUE_get_scheme()
- Fixed test3 by removing the DSA key generation

* Nov 23 2022 Massimiliano Pala <madwolf@openca.org>
- Refactored Composite CTX structure to better handling signing
- Fixed several memory leaks that affected the multi-key signatures
- Initial support for alternative keys together with composite ones

* Sep 28 2022 Massimiliano Pala <madwolf@openca.org>
- Full reorganization for library initialization (OID)
- Added PKI_TOKEN_set_hsm() function to update Token's HSM
- Updated TOKEN and HSM data structure to include login and creds status
- Ported support for Composite Crypto with dynamic ASN1 and PKEY method
- Updated support for LibOQS 0.7.2

* Aug 24 2022 Massimiliano Pala <madwolf@openca.org>
- Fixed EC key generation and encoding.
- Fix for correct support for when ENABLE_OQS is disabled.
- Updated PKI_KEYPARAMS_set_bits() to enable the use of 128/192/256 bits paradigm.
- Fix for signature OID set.
- Small fix for older application that use -1 as PKI_DATA_FORMAT instead of PKI_DATA_FORMAT_UNKNOWN when loading X509 objects without specifying the type.
- Fixed @path@ -> @rpath@ in src/global-vars.in.
- Fixed order of ldflags <libs> ldadd.
- Updated libpki-config file to correctly report the libxml2 include library too.
- Updated global vars file to better support libxml2 includes and linker options.
- Regenerated ./configure script after removing check for X509_verfiy function in openssl's libcrypto library.
- Removed the use of -fsanitize=address for compiler because it creates issues with nodejs integration (node_addon_api is missing -shared-libasan when compiling).
- Added better logging when URL (file) resources are not found.
- Improved handling of PKI TOKEN. Updated delayed key-loading procedure for the token interface to simplify applications' integration.