@@ -1050,7 +1050,12 @@ int item_verify(EVP_MD_CTX *ctx, const ASN1_ITEM *it, void *asn, X509_ALGOR *a, 
 }
 
 // Implemented
-int item_sign(EVP_MD_CTX *ctx, const ASN1_ITEM *it, void *asn, X509_ALGOR *alg1, X509_ALGOR *alg2, ASN1_BIT_STRING *sig) {
+int item_sign(EVP_MD_CTX      * ctx, 
+              const ASN1_ITEM * it, 
+              void            * asn, 
+              X509_ALGOR      * alg1, 
+              X509_ALGOR      * alg2, 
+              ASN1_BIT_STRING * sig) {
 
   /*
   * Return value meanings:
